--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,14 @@
-<p>
-  <%= image_tag("collage_photo", alt: "Collage photo", width: "400px") %>
-</p>
+<div class="box">
+    <%= image_tag("collage_photo", alt: "Collage photo", width: "400px") %>
+</div>
+<div class="box">
+  <ul>
+    <li><%= image_tag("instalike_logo", alt: "Instalike logo", width: "150px") %></li>
+    <li>フォームタグ</li>
+    <li>フォームタグ</li>
+    <li>フォームタグ</li>
+    <li>フォームタグ</li>
+    <li>facebookアカウントをお持ちの方</li>
+    <li>フォームタグ</li>
+  </ul>
+</div>
