--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,7 @@
     <li>フォームタグ</li>
     <li>フォームタグ</li>
     <li>フォームタグ</li>
-    <li>フォームタグ</li>
-    <li>facebookアカウントをお持ちの方</li>
+    <li><%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %></li>
     <li>フォームタグ</li>
   </ul>
 </div>
