--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", '#', id: "logo" %>
+    <%= link_to "sample app", '/', id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",   '/' %></li>
@@ -10,3 +10,11 @@
     </nav>
   </div>
 </header>
+<!--
+トップページへのリンク
+検索フォーム
+通知（あり、なし）
+自分のページへのリンク
+写真アップロード画面へのリンクがある
+titleを各ページごとにユニークに設定する
+Rails tutorialの学びを活かす -->
