--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,6 +6,11 @@
     <div class="col-md-6 col-md-offset-3">
 
       <div class="field">
+        <%= f.label :image %><br/>
+        <%= f.file_field :image %>
+      </div>
+
+      <div class="field">
         <%= f.label :name %><br />
         <%= f.text_field :name %>
       </div>
