--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,43 @@
  // Bootstrap Sass
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* 検索ボックス */
+dl.searchbox{
+  width: 200px;
+  position:relative;
+  background-color:#fff;
+  border-radius:2px;
+  margin-top: 10px;
+}
+dl.searchbox dt{
+  padding: 0px;
+}
+dl.searchbox dt input{
+  width:70%;
+  height:10px;
+  line-height:0px;
+  background:none;
+  border:none;
+}
+dl.searchbox dd{
+  position:absolute;
+  top:0px;
+  right:0px;
+  width:30%;
+  height:10px;
+}
+.search-btn{
+  display:block;
+  background:#5fad35;
+  width:100%;
+  height:10px;
+  line-height:17px;
+  border:none;
+  border-radius: 2px;
+  color:#FFF;
+}
+
+.search-btn:hover {
+  background:#228B22;
+}
