--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -33,3 +33,28 @@ input, textarea, select, .uneditable-input {
 input {
   height: auto !important;
 }
+
+/* usr_show */
+
+.showbox {
+  display: flex;
+  align-items: stretch;
+  margin-top: 50px;
+}
+
+.userbox{
+  background-color: #ffffff;
+}
+
+.user_postbox {
+  margin-left: 90px;
+  display:flex;
+  flex-wrap:wrap;
+
+  .imagbox {
+    width: 75%;
+    box-sizing: border-box;
+    margin-bottom: 5px;
+
+}
+}
