--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,30 +1,62 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<% provide(:title, "edit") %>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <br />
+        <br />
+        <div class="field">
+          <%= f.label :image, 'アイコン画像' %>
+          <%= f.file_field :image %>
+        </div>
+        <br />
+        <div class="field">
+          <%= f.label :name, "ユーザーネーム" %>
+          <%= f.text_field :name, autofocus: true %>
+        </div>
+        <br />
+        <div class="field">
+          <%= f.label :fullname, '氏名' %>
+          <%= f.text_field :fullname, autofocus: true %>
+        </div>
+        <br />
+        <div class="field">
+          <%= f.label :email, 'メールアドレス' %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+        <br />
+        <div class="field">
+          <%= f.label :self_introduction, '自己紹介(500文字以内)' %>
+          <%= f.text_field :self_introduction, autofocus: true %>
+        </div>
+        <br />
+        <div class="field">
+          <%= f.label :website, 'ウェブサイト' %>
+          <%= f.text_field :website, autofocus: true %>
+        </div>
+        <br />
+        <div class="field">
+          <%= f.label :phone_number, '電話番号' %>
+          <%= f.text_field :website, autofocus: true %>
+        </div>
+        <br />
+        <div class="field">
+          <%= f.radio_button(:sex, "男性") %>
+          <%= f.label(:sex, "男性", value: "男性")  %>
+          <%= f.radio_button(:sex, "女性") %>
+          <%= f.label(:sex, "女性", value: "女性") %>
+        </div>
+        <br />
+        <div class="actions">
+          <%= f.submit "編集" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :image %><br/>
-    <%= f.file_field :image %>
-  </div>
+      <br />
+      <br />
+      <p>アカウントを削除しますか？ <%= button_to "アカウントを削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+      <%= link_to "Back", :back %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
+    </div>
   </div>
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
