ユーザーフォロー機能追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,10 +6,16 @@
       <%= image_tag @user.image.url(:square) %>
     <% end %>
     <p><%= @user.name %></p>
-    <p>フォロー、フォロワー</p>
-    <p>自己紹介</p>
+    <% @user ||= current_user %>
+    <section class="stats">
+      <%= render 'shared/stats' %>
+    </section>
+    <p><%= @user.self_introduction %></p>
 
-    <% if user_signed_in? %>
+
+    <%= render 'follow_form' if user_signed_in? %>
+
+    <% if user_signed_in? && current_user %>
       <%= link_to "プロフィール編集", edit_user_registration_path %>
     <% end %>
   </div>
@@ -19,15 +25,14 @@
     <% @user.posts.each do |post| %>
       <tr>
         <td>
-          <%= link_to post_path do %>
+          <%= link_to post_path(post) do %>
           <%= image_tag post.image_url(:thumb100).to_s %>
           <% end %>
         </td>
       </tr>
     <% end %>
     <% @user.liked_posts.each do |post| %>
-      <%= post.user.email %>
-      <%= post.content %>
+      <%=  %>
     <% end %>
     </div>
   </div>
