--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 
     <p><%= link_to "写真一覧", posts_path %></p>
     <p><%= link_to "ユーザー一覧", users_path %></p>
-    
-    <p><%= link_to "パスワード変更", edit_user_password_path(current_user.id) %></p>
+
+    <!-- <p>< link_to "パスワード変更", edit_user_password_path(current_user.id) %></p> -->
 
 </div>
