--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,10 +20,10 @@
       <% @comments.each do |c| %>
         <div>
           <% unless c.user.blank? %>
-            <a href="<%= user_path(c.user_id) %>"><%= image_tag c.user.image.to_s,
+            <a href="<%= user_path(c.user_id) %>"><%= image_tag c.user.image.to_s, size: "100x100",
               class:"rounded-circle icon_image mr-3 mb-3"%></a>
             <% end %>
-          <%= c.user.username unless c.user.blank? %>
+
           <br />
           <%= c.content %>
         </div>
