--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,18 @@
-<%= form_for(@user) do |f| %>
-   <% if @user.image? %>
-      <%= image_tag @user.image.url %>
-   <% else %>
-      <%= image_tag "/assets/default.jpg", :size => '100x100' %>
-   <% end %>
-      <button type="button" class="btn btn-outline-secondary rounded-pill">
-         <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
-      </button>
-    <%= f.submit '更新する', class: 'btn btn-primary' %>
-<% end %>
+<div class="row">
+  <p><%= "パスワードの編集" %></p>
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(@user, :url => { :action => "update_password" } ) do |f| %>
+      <div class="field">
+        <%= f.label :password, "Password" %><br />
+        <%= f.password_field :password, :autocomplete => "off"  %>
+      </div>
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation %>
+      </div>
+      <div class="action_container">
+        <%= f.submit %>
+      </div>
+    <% end %>
+  </div>
+</div>
