--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -53,10 +53,22 @@
 
       <br />
       <br />
-      <p>アカウントを削除しますか？ <%= button_to "アカウントを削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-      <%= link_to "Back", :back %>
 
     </div>
   </div>
+
+
 <% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= link_to "パスワードを変更する", edit_user_path(@user) %>
+    <br />
+    <br />
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <p>アカウントを削除しますか？ <%= button_to "アカウントを削除", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+  </div>
+</div>
+<%= link_to "Back", :back %>
